--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,11 +6,13 @@ ADD_LIBRARY (toolstuff STATIC common_write.c)
 
 # as we link with --as-needed we do not get bogus dependencies
 SET (SYSTEM_LIBRARIES ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
-IF (NOT DEBIAN)
+IF (ENABLE_RPMDB)
 SET (SYSTEM_LIBRARIES ${RPMDB_LIBRARY} ${SYSTEM_LIBRARIES})
-ENDIF (NOT DEBIAN)
+ENDIF (ENABLE_RPMDB)
 
-IF (NOT DEBIAN)
+SET (tools_list mergesolv dumpsolv installcheck)
+
+IF (ENABLE_RPMDB)
 ADD_EXECUTABLE (rpmdb2solv rpmdb2solv.c)
 TARGET_LINK_LIBRARIES (rpmdb2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
 
@@ -19,16 +21,16 @@ TARGET_LINK_LIBRARIES (rpms2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES
 
 ADD_EXECUTABLE (findfileconflicts findfileconflicts.c)
 TARGET_LINK_LIBRARIES (findfileconflicts libsolvext libsolv ${SYSTEM_LIBRARIES})
-ENDIF (NOT DEBIAN)
+
+SET (tools_list ${tools_list} rpmdb2solv rpms2solv)
+ENDIF (ENABLE_RPMDB)
+
+IF (ENABLE_RPMMD)
+ADD_EXECUTABLE (repomdxml2solv repomdxml2solv.c)
+TARGET_LINK_LIBRARIES (repomdxml2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
 
 ADD_EXECUTABLE (rpmmd2solv rpmmd2solv.c)
 TARGET_LINK_LIBRARIES (rpmmd2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
-
-ADD_EXECUTABLE (helix2solv helix2solv.c)
-TARGET_LINK_LIBRARIES (helix2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
-
-ADD_EXECUTABLE (susetags2solv susetags2solv.c)
-TARGET_LINK_LIBRARIES (susetags2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
 
 ADD_EXECUTABLE (updateinfoxml2solv updateinfoxml2solv.c)
 TARGET_LINK_LIBRARIES (updateinfoxml2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
@@ -36,8 +38,22 @@ TARGET_LINK_LIBRARIES (updateinfoxml2solv toolstuff libsolvext libsolv ${SYSTEM_
 ADD_EXECUTABLE (deltainfoxml2solv deltainfoxml2solv.c)
 TARGET_LINK_LIBRARIES (deltainfoxml2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
 
-ADD_EXECUTABLE (repomdxml2solv repomdxml2solv.c)
-TARGET_LINK_LIBRARIES (repomdxml2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
+SET (tools_list ${tools_list} repomdxml2solv rpmmd2solv updateinfoxml2solv deltainfoxml2solv)
+ENDIF (ENABLE_RPMMD)
+
+IF (ENABLE_HELIXREPO)
+ADD_EXECUTABLE (helix2solv helix2solv.c)
+TARGET_LINK_LIBRARIES (helix2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
+
+SET (tools_list ${tools_list} helix2solv)
+ENDIF (ENABLE_HELIXREPO)
+
+IF (ENABLE_SUSEREPO)
+ADD_EXECUTABLE (susetags2solv susetags2solv.c)
+TARGET_LINK_LIBRARIES (susetags2solv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
+
+SET (tools_list ${tools_list} susetags2solv)
+ENDIF (ENABLE_SUSEREPO)
 
 ADD_EXECUTABLE (installcheck installcheck.c)
 TARGET_LINK_LIBRARIES (installcheck libsolvext libsolv ${SYSTEM_LIBRARIES})
@@ -51,25 +67,6 @@ TARGET_LINK_LIBRARIES (dumpsolv libsolv)
 ADD_EXECUTABLE (mergesolv mergesolv.c )
 TARGET_LINK_LIBRARIES (mergesolv toolstuff libsolvext libsolv ${SYSTEM_LIBRARIES})
 
-INSTALL (TARGETS
-    mergesolv
-    dumpsolv
-    susetags2solv
-    helix2solv
-    rpmmd2solv
-    updateinfoxml2solv
-    deltainfoxml2solv
-    repomdxml2solv
-    installcheck
-    DESTINATION ${BIN_INSTALL_DIR})
+INSTALL (TARGETS ${tools_list} DESTINATION ${BIN_INSTALL_DIR})
 
-IF (NOT DEBIAN)
-INSTALL (TARGETS
-    rpmdb2solv
-    rpms2solv
-    DESTINATION ${BIN_INSTALL_DIR})
-ENDIF (NOT DEBIAN)
-
-INSTALL (PROGRAMS
-   repo2solv.sh
-   DESTINATION ${BIN_INSTALL_DIR})
+INSTALL (PROGRAMS repo2solv.sh DESTINATION ${BIN_INSTALL_DIR})
