revive autogenerated developer documentation to auto-publish it at doc.opensuse.org

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,6 +216,7 @@ IF (ENABLE_PERL OR ENABLE_PYTHON OR ENABLE_RUBY)
     ADD_SUBDIRECTORY (bindings)
 ENDIF (ENABLE_PERL OR ENABLE_PYTHON OR ENABLE_RUBY)
 ADD_SUBDIRECTORY (examples)
+ADD_SUBDIRECTORY (doc)
 
 MESSAGE (STATUS "version: ${VERSION}")
 
