- make pool flags private, allow self conflicts for rpm, add pool_set/get_flags

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -11,6 +11,8 @@ ADD_CUSTOM_COMMAND (
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS ${CMAKE_SOURCE_DIR}/bindings/solv.i
 )
+
+ADD_DEFINITIONS(-Wno-unused)
 INCLUDE_DIRECTORIES (${PYTHON_INCLUDE_PATH})
 
 ADD_LIBRARY (bindings_python SHARED solv_python.c)
