- make old rpmdb pubkey support optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ OPTION (ENABLE_RUBY "Build the ruby bindings?" OFF)
 OPTION (USE_VENDORDIRS "Install the bindings in vendor directories?" OFF)
 
 OPTION (ENABLE_RPMDB "Build with rpm database support?" OFF)
+OPTION (ENABLE_RPMDB_PUBKEY "Build with rpmdb pubkey support?" OFF)
 OPTION (ENABLE_RPMMD "Build with rpmmd repository support?" OFF)
 OPTION (ENABLE_SUSEREPO "Build with suse repository support?" OFF)
 OPTION (ENABLE_COMPS "Build with fedora comps support?" OFF)
@@ -86,6 +87,7 @@ IF (NOT ENABLE_RPMDB AND
     NOT ENABLE_HELIXREPO AND
     NOT ENABLE_DEBIAN)
     SET (ENABLE_RPMDB ON)
+    SET (ENABLE_RPMDB_PUBKEY ON)
     SET (ENABLE_RPMMD ON)
     SET (ENABLE_SUSEREPO ON)
     SET (ENABLE_HELIXREPO ON)
@@ -129,7 +131,8 @@ TEST_BIG_ENDIAN (WORDS_BIGENDIAN)
 
 # should create config.h with #cmakedefine instead...
 FOREACH (VAR HAVE_STRCHRNUL HAVE_FOPENCOOKIE HAVE_FUNOPEN WORDS_BIGENDIAN
-  ENABLE_RPMDB ENABLE_RPMMD ENABLE_SUSEREPO ENABLE_COMPS ENABLE_HELIXREPO ENABLE_DEBIAN)
+  ENABLE_RPMDB ENABLE_RPMDB_PUBKEY ENABLE_RPMMD ENABLE_SUSEREPO ENABLE_COMPS
+  ENABLE_HELIXREPO ENABLE_DEBIAN)
   IF(${VAR})
     ADD_DEFINITIONS (-D${VAR}=1)
   ENDIF (${VAR})
