--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,3 +250,6 @@ ADD_CUSTOM_TARGET (srcpackage
 ADD_CUSTOM_TARGET (srcpackage_local
   ${AUTOBUILD_COMMAND}
 )
+
+ENABLE_TESTING()
+ADD_SUBDIRECTORY (test)
