swig -DENABLE_RPMDB if RPMDB enabled.

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -10,6 +10,9 @@ FIND_PACKAGE (SWIG)
 
 MESSAGE (STATUS "Found SWIG version ${SWIG_VERSION}")
 SET (SWIG_INPUT "${CMAKE_CURRENT_SOURCE_DIR}/solv.i")
+IF (ENABLE_RPMDB)
+  SET (SWIG_DEFS -DENABLE_RPMDB)
+ENDIF ()
 
 IF (ENABLE_PYTHON)
     ADD_SUBDIRECTORY (python)
