- add M&M synthesis file parser, add mkd2solv tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ OPTION (ENABLE_SUSEREPO "Build with suse repository support?" OFF)
 OPTION (ENABLE_COMPS "Build with fedora comps support?" OFF)
 OPTION (ENABLE_HELIXREPO "Build with helix repository support?" OFF)
 OPTION (ENABLE_DEBIAN "Build with debian database/repository support?" OFF)
+OPTION (ENABLE_MDKREPO "Build with mandriva/mageia repository support?" OFF)
 
 #IF(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERISION} GREATER 2.4)
 #ENDIF(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERISION} GREATER 2.4)
@@ -85,6 +86,7 @@ IF (NOT ENABLE_RPMDB AND
     NOT ENABLE_RPMMD AND
     NOT ENABLE_SUSEREPO AND
     NOT ENABLE_HELIXREPO AND
+    NOT ENABLE_MDKREPO AND
     NOT ENABLE_DEBIAN)
     SET (ENABLE_RPMDB ON)
     SET (ENABLE_RPMDB_PUBKEY ON)
@@ -132,7 +134,7 @@ TEST_BIG_ENDIAN (WORDS_BIGENDIAN)
 # should create config.h with #cmakedefine instead...
 FOREACH (VAR HAVE_STRCHRNUL HAVE_FOPENCOOKIE HAVE_FUNOPEN WORDS_BIGENDIAN
   ENABLE_RPMDB ENABLE_RPMDB_PUBKEY ENABLE_RPMMD ENABLE_SUSEREPO ENABLE_COMPS
-  ENABLE_HELIXREPO ENABLE_DEBIAN)
+  ENABLE_HELIXREPO ENABLE_MDKREPO ENABLE_DEBIAN)
   IF(${VAR})
     ADD_DEFINITIONS (-D${VAR}=1)
     SET (SWIG_FLAGS ${SWIG_FLAGS} -D${VAR})
