- make sure to link against the lzma library if ENABLE_LZMA_COMPRESSION is set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,9 @@ INCLUDE (${CMAKE_SOURCE_DIR}/VERSION.cmake)
 
 FIND_PACKAGE (EXPAT REQUIRED)
 FIND_PACKAGE (ZLIB REQUIRED)
+IF (ENABLE_LZMA_COMPRESSION)
+FIND_PACKAGE (LZMA REQUIRED)
+ENDIF (ENABLE_LZMA_COMPRESSION)
 
 IF (FEDORA)
 MESSAGE(STATUS "Building for Fedora")
