- get rid of DEBINA_SEMANTICS, add pool->noarchid, add DISTTYPE_ARCH

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ ENDIF (FEDORA)
 
 IF (DEBIAN)
 MESSAGE (STATUS "Building for Debian")
-ADD_DEFINITIONS (-DDEBIAN -DDEBIAN_SEMANTICS)
+ADD_DEFINITIONS (-DDEBIAN)
 SET (ENABLE_DEBIAN ON)
 ENDIF (DEBIAN)
 
