- clean up system type definition, use -DSUSE=1 when building for suse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,24 +53,65 @@ INSTALL( FILES ${CMAKE_MODULE_PATH}/FindLibSolv.cmake DESTINATION ${CMAKE_INSTAL
 
 INCLUDE (${CMAKE_SOURCE_DIR}/VERSION.cmake)
 
-FIND_PACKAGE (EXPAT REQUIRED)
-FIND_PACKAGE (ZLIB REQUIRED)
-IF (ENABLE_LZMA_COMPRESSION)
-FIND_PACKAGE (LZMA REQUIRED)
-ENDIF (ENABLE_LZMA_COMPRESSION)
+SET (have_system x)
 
 IF (FEDORA)
 MESSAGE(STATUS "Building for Fedora")
 ADD_DEFINITIONS (-DFEDORA)
 SET (ENABLE_RPMDB ON)
 SET (ENABLE_RPMMD ON)
+SET (have_system ${have_system}x)
 ENDIF (FEDORA)
 
 IF (DEBIAN)
 MESSAGE (STATUS "Building for Debian")
 ADD_DEFINITIONS (-DDEBIAN)
 SET (ENABLE_DEBIAN ON)
+SET (have_system ${have_system}x)
 ENDIF (DEBIAN)
+
+IF (SUSE)
+MESSAGE (STATUS "Building for SUSE")
+ADD_DEFINITIONS (-DSUSE)
+SET (ENABLE_RPMDB ON)
+SET (ENABLE_RPMDB_PUBKEY ON)
+SET (ENABLE_RPMMD ON)
+SET (ENABLE_SUSEREPO ON)
+SET (ENABLE_HELIXREPO ON)
+SET (have_system ${have_system}x)
+ENDIF (SUSE)
+
+IF (ARCHLINUX)
+MESSAGE (STATUS "Building for Archlinux")
+ADD_DEFINITIONS (-DARCHLINUX)
+SET (ENABLE_ARCHREPO ON)
+SET (have_system ${have_system}x)
+ENDIF (ARCHLINUX)
+
+IF (MANDRIVA)
+MESSAGE (STATUS "Building for Mandriva/Mageia")
+ADD_DEFINITIONS (-DMANDRIVA)
+SET (ENABLE_MDKREPO ON)
+SET (have_system ${have_system}x)
+ENDIF (MANDRIVA)
+
+IF (${have_system} STREQUAL x)
+    MESSAGE (STATUS "Building for no system")
+    ADD_DEFINITIONS (-DNOSYSTEM)
+ENDIF (${have_system} STREQUAL x)
+IF (${have_system} STRGREATER xx)
+    MESSAGE (FATAL_ERROR "Can only compile for one system type.")
+ENDIF (${have_system} STRGREATER xx)
+
+IF (ENABLE_ARCHREPO)
+SET (ENABLE_LZMA_COMPRESSION ON)
+ENDIF (ENABLE_ARCHREPO)
+
+FIND_PACKAGE (EXPAT REQUIRED)
+FIND_PACKAGE (ZLIB REQUIRED)
+IF (ENABLE_LZMA_COMPRESSION)
+FIND_PACKAGE (LZMA REQUIRED)
+ENDIF (ENABLE_LZMA_COMPRESSION)
 
 IF (RPM5)
 MESSAGE (STATUS "Enabling RPM 5 support")
@@ -86,22 +127,6 @@ IF (MULTI_SEMANTICS)
 MESSAGE (STATUS "Enabling multi dist support")
 ADD_DEFINITIONS (-DMULTI_SEMANTICS)
 ENDIF (MULTI_SEMANTICS)
-
-# compat: enable some database types
-IF (NOT ENABLE_RPMDB AND
-    NOT ENABLE_RPMMD AND
-    NOT ENABLE_SUSEREPO AND
-    NOT ENABLE_HELIXREPO AND
-    NOT ENABLE_MDKREPO AND
-    NOT ENABLE_ARCHREPO AND
-    NOT ENABLE_DEBIAN)
-    SET (ENABLE_RPMDB ON)
-    SET (ENABLE_RPMDB_PUBKEY ON)
-    SET (ENABLE_RPMMD ON)
-    SET (ENABLE_SUSEREPO ON)
-    SET (ENABLE_HELIXREPO ON)
-    SET (ENABLE_DEBIAN ON)
-ENDIF ()
 
 IF (ENABLE_RPMDB)
   FIND_LIBRARY (RPMDB_LIBRARY NAMES rpmdb)
