- be a bit more tolerant about FindRuby not setting RUBY_VENDORARCH_DIR

--- a/bindings/ruby/CMakeLists.txt
+++ b/bindings/ruby/CMakeLists.txt
@@ -1,10 +1,10 @@
 FIND_PACKAGE (Ruby)
 
-IF (USE_VENDORDIRS)
+IF (USE_VENDORDIRS AND RUBY_VENDORARCH_DIR)
     SET (RUBY_INSTALL_DIR ${RUBY_VENDORARCH_DIR})
-ELSE (USE_VENDORDIRS)
+ELSE (USE_VENDORDIRS AND RUBY_VENDORARCH_DIR)
     SET (RUBY_INSTALL_DIR ${RUBY_SITEARCH_DIR})
-ENDIF (USE_VENDORDIRS)
+ENDIF (USE_VENDORDIRS AND RUBY_VENDORARCH_DIR)
 
 MESSAGE (STATUS "Ruby executable: ${RUBY_EXECUTABLE}")
 MESSAGE (STATUS "Ruby installation dir: ${RUBY_INSTALL_DIR}")
