add repo_add_rpm_handle, add ENABLE_RPMDB_BYRPMHEADER so that we don't need to link against rpm if rpm_byrpmh is not needed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ OPTION (USE_VENDORDIRS "Install the bindings in vendor directories?" OFF)
 
 OPTION (ENABLE_RPMDB "Build with rpm database support?" OFF)
 OPTION (ENABLE_RPMDB_PUBKEY "Build with rpmdb pubkey support?" OFF)
+OPTION (ENABLE_RPMDB_BYRPMHEADER "Build with rpmdb Header support?" OFF)
 OPTION (ENABLE_RPMMD "Build with rpmmd repository support?" OFF)
 OPTION (ENABLE_SUSEREPO "Build with suse repository support?" OFF)
 OPTION (ENABLE_COMPS "Build with fedora comps support?" OFF)
@@ -77,6 +78,7 @@ MESSAGE (STATUS "Building for SUSE")
 ADD_DEFINITIONS (-DSUSE)
 SET (ENABLE_RPMDB ON)
 SET (ENABLE_RPMDB_PUBKEY ON)
+SET (ENABLE_RPMDB_BYRPMHEADER ON)
 SET (ENABLE_RPMMD ON)
 SET (ENABLE_SUSEREPO ON)
 SET (ENABLE_HELIXREPO ON)
