check for rpm/db.h header file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,7 @@ MESSAGE (STATUS "Enabling multi dist support")
 ADD_DEFINITIONS (-DMULTI_SEMANTICS)
 ENDIF (MULTI_SEMANTICS)
 
+INCLUDE (CheckIncludeFile)
 IF (ENABLE_RPMDB)
   FIND_LIBRARY (RPMDB_LIBRARY NAMES rpmdb)
 
@@ -160,6 +161,7 @@ IF (ENABLE_RPMDB)
       SET (RPMDB_LIBRARY ${DB_LIBRARY} ${RPMDB_LIBRARY})
     ENDIF (DB_LIBRARY)
   ENDIF (RPM5 OR FEDORA)
+  CHECK_INCLUDE_FILE(rpm/db.h HAVE_RPM_DB_H)
 ENDIF (ENABLE_RPMDB)
 
 INCLUDE (CheckFunctionExists)
@@ -172,6 +174,7 @@ TEST_BIG_ENDIAN (WORDS_BIGENDIAN)
 
 # should create config.h with #cmakedefine instead...
 FOREACH (VAR HAVE_STRCHRNUL HAVE_FOPENCOOKIE HAVE_FUNOPEN WORDS_BIGENDIAN
+  HAVE_RPM_DB_H
   ENABLE_RPMDB ENABLE_RPMDB_PUBKEY ENABLE_RPMMD ENABLE_SUSEREPO ENABLE_COMPS
   ENABLE_HELIXREPO ENABLE_MDKREPO ENABLE_ARCHREPO ENABLE_DEBIAN
   ENABLE_LZMA_COMPRESSION ENABLE_BZIP2_COMPRESSION)
