build: zlib should come before rpmdb.
On Fedora 17, building with FEDORA=1, ld version 2.22.52.0.1-10.fc17, gcc
version 4.7.0 I get:

../ext/libsolvext.so.0: undefined reference to `gzclose'

and similar ones, all mentioning a zlib function. This is resolved if
'-lz' appears earlier on the gcc command line. I can't find anything in
gcc/ld manual explaining this, it could be a well hidden gcc bug (that the
build started to fail after a seemingly irrelevant commit d5597d3 would
suggested this too) [1].

[1] https://bugzilla.redhat.com/show_bug.cgi?id=888285

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,7 +7,7 @@ IF (ENABLE_BZIP2_COMPRESSION)
 SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${BZIP2_LIBRARIES})
 ENDIF (ENABLE_BZIP2_COMPRESSION)
 IF (NOT DEBIAN)
-SET (SYSTEM_LIBRARIES ${RPMDB_LIBRARY} ${SYSTEM_LIBRARIES})
+SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${RPMDB_LIBRARY})
 ENDIF (NOT DEBIAN)
 
 ADD_EXECUTABLE (solv solv.c)
