--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -13,7 +13,7 @@ IF (ENABLE_BZIP2_COMPRESSION)
 SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${BZIP2_LIBRARIES})
 ENDIF (ENABLE_BZIP2_COMPRESSION)
 IF (ENABLE_RPMDB)
-SET (SYSTEM_LIBRARIES ${RPMDB_LIBRARY} ${SYSTEM_LIBRARIES})
+SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${RPMDB_LIBRARY})
 ENDIF (ENABLE_RPMDB)
 
 SET (tools_list mergesolv dumpsolv installcheck testsolv)
