link libsolvext with libsolv for completeness

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -89,7 +89,7 @@ IF (DISABLE_SHARED)
 ADD_LIBRARY (libsolvext STATIC ${libsolvext_SRCS})
 ELSE (DISABLE_SHARED)
 ADD_LIBRARY (libsolvext SHARED ${libsolvext_SRCS})
-TARGET_LINK_LIBRARIES(libsolvext ${SYSTEM_LIBRARIES})
+TARGET_LINK_LIBRARIES(libsolvext libsolv ${SYSTEM_LIBRARIES})
 ENDIF (DISABLE_SHARED)
 
 SET_TARGET_PROPERTIES(libsolvext PROPERTIES OUTPUT_NAME "solvext")
