Add Haiku repository support to libsolvext

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -78,6 +78,13 @@ IF (ENABLE_CUDFREPO)
 	repo_cudf.h)
 ENDIF (ENABLE_CUDFREPO)
 
+IF (ENABLE_HAIKU)
+    SET (libsolvext_SRCS ${libsolvext_SRCS}
+	repo_haiku.cpp)
+    SET (libsolvext_HEADERS ${libsolvext_HEADERS}
+	repo_haiku.h)
+ENDIF (ENABLE_HAIKU)
+
 SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 SET (CMAKE_SHARED_LINKER_FLAGS "${LINK_FLAGS} -Wl,--version-script=${CMAKE_SOURCE_DIR}/ext/libsolvext.ver")
 
